--- a/app/src/main/res/layout/act_promotion_record.xml
+++ b/app/src/main/res/layout/act_promotion_record.xml
@@ -118,6 +118,7 @@
                 </FrameLayout>
 
                 <TextView
+                        android:id="@+id/tv_to_promotion"
                         android:layout_gravity="bottom|center_horizontal"
                         android:text="快去邀请更多好友吧"
                         android:textColor="#ff505050"
