--- a/app/src/main/res/layout/vh_advertising.xml
+++ b/app/src/main/res/layout/vh_advertising.xml
@@ -5,6 +5,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <ImageView
+            android:src="@mipmap/ad_holder"
+            android:scaleType="centerCrop"
             android:layout_marginTop="6dp"
             android:id="@+id/img_advertising"
             android:background="#EAEAEA"
