--- a/app/src/main/res/layout/act_web.xml
+++ b/app/src/main/res/layout/act_web.xml
@@ -9,7 +9,7 @@
             android:layout_height="match_parent">
 
     </me.dkzwm.widget.srl.ClassicSmoothRefreshLayout>
-    <WebView
+    <com.jyt.video.web.MyWebView
             android:id="@+id/web_view"
-            android:layout_width="match_parent" android:layout_height="match_parent"></WebView>
+            android:layout_width="match_parent" android:layout_height="match_parent"></com.jyt.video.web.MyWebView>
 </FrameLayout>
