--- a/app/src/main/res/layout/frag_type_video.xml
+++ b/app/src/main/res/layout/frag_type_video.xml
@@ -30,6 +30,8 @@
     </LinearLayout>
 
     <LinearLayout
+            android:divider="@drawable/divider_c8"
+            android:showDividers="middle"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:id="@+id/ll_video_type"
