--- a/app/src/main/res/layout/vh_collection_video.xml
+++ b/app/src/main/res/layout/vh_collection_video.xml
@@ -14,10 +14,10 @@
             android:layout_width="16dp" android:layout_height="16dp"/>
 
     <ImageView
+            android:src="@mipmap/video_holder"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="35dp"
             android:id="@+id/img_cover"
-            android:background="#66666666"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="19dp"
             app:layout_constraintTop_toTopOf="parent"
