--- a/app/src/main/res/layout/vh_first_video_type.xml
+++ b/app/src/main/res/layout/vh_first_video_type.xml
@@ -4,7 +4,7 @@
               android:background="@color/white"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent">
-    <RelativeLayout android:layout_width="match_parent" android:layout_height="34dp">
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="43dp">
         <View
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="22dp"
@@ -17,13 +17,13 @@
                 android:textSize="14dp"
                 android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:id="@+id/tv_group_name"/>
-        
+
         <android.support.v7.widget.RecyclerView
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="84dp"
                 android:id="@+id/rcv_type"
                 android:layout_width="match_parent"
-                                                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
     </RelativeLayout>
     <FrameLayout
             android:visibility="gone"
@@ -42,10 +42,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
         </android.support.v7.widget.RecyclerView>
-    <View
-            android:layout_gravity="bottom"
-            android:background="@drawable/divider_c8"
-            android:layout_width="match_parent" android:layout_height="1dp" android:id="@+id/v_2"/>
+    <!--<View-->
+            <!--android:layout_gravity="bottom"-->
+            <!--android:background="@drawable/divider_c8"-->
+            <!--android:layout_width="match_parent" android:layout_height="1dp" android:id="@+id/v_2"/>-->
     </FrameLayout>
 
 </LinearLayout>
