--- a/app/src/main/res/layout/vh_thumb_video.xml
+++ b/app/src/main/res/layout/vh_thumb_video.xml
@@ -1,103 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                              xmlns:app="http://schemas.android.com/apk/res-auto"
-                                              app:cardCornerRadius="11dp"
-                                              android:layout_marginLeft="8dp"
-                                              android:layout_marginTop="13dp"
-                                              android:layout_marginBottom="2dp"
-                                             android:layout_width="wrap_content"
-                                             android:layout_height="wrap_content">
-    <android.support.constraint.ConstraintLayout
-            android:layout_gravity="center_horizontal"
-            android:layout_width="match_parent"
-                                                 android:layout_height="wrap_content">
-        <ImageView
-                android:background="#eee"
-                android:id="@+id/img_cover"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_width="171dp" android:layout_height="114dp"/>
-        <TextView
-                android:paddingLeft="6dp"
-                android:paddingRight="6dp"
-                android:paddingTop="2dp"
-                android:paddingBottom="2dp"
-                android:includeFontPadding="false"
-                android:background="@drawable/shape_duration"
-                android:layout_marginBottom="6dp"
-                android:layout_marginRight="6dp"
-                app:layout_constraintRight_toRightOf="@id/img_cover"
-                app:layout_constraintBottom_toBottomOf="@id/img_cover"
-                android:text="00:03:00"
-                android:textColor="#ffffffff"
-                android:textSize="10dp"
-                android:id="@+id/tv_duration"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
-        <TextView
-                android:singleLine="true"
-                android:ellipsize="end"
-                android:includeFontPadding="false"
-                android:text="圣诞节礼物还有..."
-                android:textColor="#ff000000"
-                android:textSize="12dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginTop="14dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/img_cover"
-                android:id="@+id/tv_title"
-                android:layout_width="100dp" android:layout_height="wrap_content"/>
+<FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+>
+    <android.support.v7.widget.CardView
 
-        <TextView
-                android:layout_marginRight="6dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tv_title"
-                app:layout_constraintBottom_toBottomOf="@id/tv_title"
-                android:text="100"
-                android:textColor="#ff333333"
-                android:textSize="10dp"
-                android:id="@+id/tv_price"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
-        <ImageView
-                android:layout_marginRight="3dp"
-                app:layout_constraintTop_toTopOf="@id/tv_price"
-                app:layout_constraintBottom_toBottomOf="@id/tv_price"
-                app:layout_constraintRight_toLeftOf="@id/tv_price"
-                android:src="@mipmap/jinbi"
-                android:layout_width="9dp" android:layout_height="9dp"/>
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="2dp"
+            app:cardCornerRadius="11dp"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="171dp"
+                android:layout_height="wrap_content">
+            <ImageView
+                    android:src="@mipmap/video_holder"
+                    app:layout_constrainedWidth="true"
+                    app:layout_constraintDimensionRatio="171:114"
+                    android:id="@+id/img_cover"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_width="0dp" android:layout_height="0dp"/>
+            <TextView
+                    android:paddingLeft="6dp"
+                    android:paddingRight="6dp"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:includeFontPadding="false"
+                    android:background="@drawable/shape_duration"
+                    android:layout_marginBottom="6dp"
+                    android:layout_marginRight="6dp"
+                    app:layout_constraintRight_toRightOf="@id/img_cover"
+                    app:layout_constraintBottom_toBottomOf="@id/img_cover"
+                    android:text="00:03:00"
+                    android:textColor="#ffffffff"
+                    android:textSize="10dp"
+                    android:id="@+id/tv_duration"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:singleLine="true"
+                    android:ellipsize="end"
+                    android:includeFontPadding="false"
+                    android:text="圣诞节礼物还有..."
+                    android:textColor="#ff000000"
+                    android:textSize="12dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="14dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/img_cover"
+                    android:id="@+id/tv_title"
+                    android:layout_width="100dp" android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:layout_marginRight="6dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/tv_title"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_title"
+                    android:text="100"
+                    android:textColor="#ff333333"
+                    android:textSize="10dp"
+                    android:id="@+id/tv_price"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+            <ImageView
+                    android:layout_marginRight="3dp"
+                    app:layout_constraintTop_toTopOf="@id/tv_price"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_price"
+                    app:layout_constraintRight_toLeftOf="@id/tv_price"
+                    android:src="@mipmap/jinbi"
+                    android:layout_width="9dp" android:layout_height="9dp"/>
 
 
-        <TextView
-                android:layout_marginBottom="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:includeFontPadding="false"
-                android:layout_marginLeft="18dp"
-                android:layout_marginTop="4dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_title"
-                android:id="@+id/tv_read_count"
-                android:text="100"
-                android:textColor="#ff333333"
-                android:textSize="10dp"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+            <TextView
+                    android:layout_marginBottom="15dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:includeFontPadding="false"
+                    android:layout_marginLeft="18dp"
+                    android:layout_marginTop="4dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_title"
+                    android:id="@+id/tv_read_count"
+                    android:text="100"
+                    android:textColor="#ff333333"
+                    android:textSize="10dp"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
-        <ImageView
-                android:layout_marginRight="2dp"
-                app:layout_constraintTop_toTopOf="@id/tv_read_count"
-                app:layout_constraintBottom_toBottomOf="@id/tv_read_count"
-                app:layout_constraintRight_toLeftOf="@id/tv_read_count"
-                android:src="@mipmap/ico_read_count"
-              android:layout_width="11dp" android:layout_height="8dp"/>
+            <ImageView
+                    android:layout_marginRight="2dp"
+                    app:layout_constraintTop_toTopOf="@id/tv_read_count"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_read_count"
+                    app:layout_constraintRight_toLeftOf="@id/tv_read_count"
+                    android:src="@mipmap/ico_read_count"
+                    android:layout_width="11dp" android:layout_height="8dp"/>
 
-        <TextView
-                android:id="@+id/tv_create_time"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tv_read_count"
-                app:layout_constraintBottom_toBottomOf="@id/tv_read_count"
-                android:layout_marginRight="7dp"
-                android:text="2019-03-11"
-                android:textColor="#ff000000"
-                android:textSize="10dp"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
-    </android.support.constraint.ConstraintLayout>
-</android.support.design.card.MaterialCardView>
+            <TextView
+                    android:id="@+id/tv_create_time"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/tv_read_count"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_read_count"
+                    android:layout_marginRight="7dp"
+                    android:text="2019-03-11"
+                    android:textColor="#ff000000"
+                    android:textSize="10dp"
+                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+</FrameLayout>
