--- a/app/src/main/res/layout/vh_video_capture_item.xml
+++ b/app/src/main/res/layout/vh_video_capture_item.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.card.MaterialCardView
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:id="@+id/card_view"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_marginLeft="9dp"
         app:cardCornerRadius="11dp"
         android:layout_marginBottom="4dp"
         android:layout_marginTop="8dp"
         android:layout_width="171dp"
         android:layout_height="102dp" xmlns:app="http://schemas.android.com/apk/res-auto">
     <ImageView
+            android:src="@mipmap/capture_holder"
             android:id="@+id/image"
             android:layout_width="match_parent" android:layout_height="match_parent"/>
 </android.support.design.card.MaterialCardView>
