--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -10,6 +10,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent" android:layout_height="115dp">
         <ImageView
+                android:src="@mipmap/logo"
                 android:id="@+id/logo"
                 android:layout_gravity="center"
                 android:layout_width="60dp" android:layout_height="60dp"/>
