--- a/app/src/main/res/layout/vh_advertising.xml
+++ b/app/src/main/res/layout/vh_advertising.xml
@@ -9,19 +9,18 @@
             android:scaleType="centerCrop"
             android:layout_marginTop="6dp"
             android:id="@+id/img_advertising"
-            android:background="#EAEAEA"
-            android:layout_width="match_parent" android:layout_height="60dp"/>
+            android:layout_width="match_parent" android:layout_height="wrap_content"/>
 
-    <TextView
-            android:paddingLeft="7dp"
-            android:paddingRight="7dp"
-            android:layout_marginLeft="4dp"
-            android:layout_alignTop="@id/img_advertising"
-            android:text="广告"
-            android:textColor="#ff707070"
-            android:textSize="10dp"
-            android:background="@drawable/shape_advertising_label"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+    <!--<TextView-->
+            <!--android:paddingLeft="7dp"-->
+            <!--android:paddingRight="7dp"-->
+            <!--android:layout_marginLeft="4dp"-->
+            <!--android:layout_alignTop="@id/img_advertising"-->
+            <!--android:text="广告"-->
+            <!--android:textColor="#ff707070"-->
+            <!--android:textSize="10dp"-->
+            <!--android:background="@drawable/shape_advertising_label"-->
+            <!--android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
 
     <ImageView
             android:layout_marginRight="4dp"
