--- a/app/src/main/res/layout/vh_advertising.xml
+++ b/app/src/main/res/layout/vh_advertising.xml
@@ -23,6 +23,7 @@
             <!--android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
 
     <ImageView
+            android:visibility="gone"
             android:layout_marginRight="4dp"
             android:layout_alignParentRight="true"
             android:src="@mipmap/circle_close"
