autosize 切换界面后需要 重新触发

--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
+                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              xmlns:app="http://schemas.android.com/apk/res-auto">
     
@@ -8,26 +8,31 @@
             android:background="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="match_parent" android:layout_height="115dp">
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
         <ImageView
                 android:src="@mipmap/logo"
                 android:id="@+id/logo"
                 android:layout_gravity="center"
-                android:layout_width="60dp" android:layout_height="60dp"/>
+                android:layout_width="110dp"
+                android:layout_height="110dp"/>
     </FrameLayout>
 
 
     <View
-            android:background="@color/white"
-            android:layout_marginTop="120dp"
+            android:background="@color/zxing_status_text"
+            android:layout_marginTop="200dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_width="match_parent" android:layout_height="113dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
     
     <ImageView
             android:src="@mipmap/yonghuzhuzhanghaoguanli"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="140dp"
+            android:layout_marginTop="220dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="21dp"
             android:layout_width="16dp" android:layout_height="16dp"/>
@@ -36,24 +41,24 @@
     <ImageView
             android:src="@mipmap/mima"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="195dp"
+            android:layout_marginTop="280dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="21dp"
             android:layout_width="16dp" android:layout_height="16dp"/>
     
     <View
-            android:layout_marginTop="165dp"
+            android:layout_marginTop="250dp"
             android:layout_marginLeft="53dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:background="#7F000000"
+            android:background="#e2e2e2"
             android:layout_width="290dp" android:layout_height="1dp"/>
     <View
-            android:layout_marginTop="219dp"
+            android:layout_marginTop="305dp"
             android:layout_marginLeft="53dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:background="#7F000000"
+            android:background="#e2e2e2"
             android:layout_width="290dp" android:layout_height="1dp"/>
 
     <EditText
@@ -62,8 +67,8 @@
             android:background="@null"
             android:imeOptions="actionNext"
             android:singleLine="true"
-            android:hint="请输入账号"
-            android:layout_marginTop="138dp"
+            android:hint="请输入帐号"
+            android:layout_marginTop="223dp"
             android:layout_marginLeft="50dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -78,35 +83,43 @@
             android:imeOptions="actionDone"
             android:singleLine="true"
             android:hint="请输入密码"
-            android:layout_marginTop="192dp"
+            android:layout_marginTop="281dp"
             android:layout_marginLeft="50dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:textColorHint="#7F000000"
             android:textSize="14dp"
-            android:layout_width="290dp" android:layout_height="wrap_content" android:id="@+id/input_psd"/>
+            android:layout_width="290dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/input_psd"/>
 
-    <Button
-            android:layout_marginTop="270dp"
-            android:layout_marginLeft="19dp"
+    <TextView
+            android:layout_marginTop="390dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:background="@drawable/shape_common_white_btn"
-            android:text="注册"
-            android:textColor="#ff000000"
+            android:text="还没有帐号？点击注册"
+            android:textColor="#000"
             android:textSize="12dp"
-            android:layout_width="158dp" android:layout_height="33dp" android:id="@+id/btn_to_register"/>
+            android:layout_width="125dp"
+            android:layout_height="16dp"
+            android:id="@+id/btn_to_register"
+            android:layout_marginLeft="218dp"
+            android:background="@color/zhihu_bottom_toolbar_bg"
+    />
 
     <Button
-            android:layout_marginTop="270dp"
-            android:layout_marginRight="19dp"
+            android:layout_marginTop="335dp"
+            android:layout_marginRight="32dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:background="@drawable/shape_primary_style_btn"
             android:textColor="#ffffffff"
             android:textSize="12dp"
-            android:text="登录"
-            android:layout_width="158dp" android:layout_height="33dp" android:id="@+id/btn_login"/>
+            android:text="登 录"
+            android:layout_width="292dp"
+            android:layout_height="40dp"
+            android:id="@+id/btn_login"
+    />
 
 
     <TextView
