--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     
     <color name="unSelText">#5D5D5D</color>
 
-    <color name="actBackground">#F3F3F3</color>
+    <color name="actBackground">#f3f3f3</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="transparent">#00FFFFFF</color>
