--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -48,16 +48,18 @@
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="43dp">
-
         </android.support.v7.widget.RecyclerView>
+
         <FrameLayout
                 android:id="@+id/fl_content"
-                android:layout_width="match_parent" android:layout_height="match_parent">
-
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
         </FrameLayout>
 </LinearLayout>
 
     <FrameLayout
             android:id="@+id/child_video"
-            android:layout_width="match_parent" android:layout_height="match_parent"></FrameLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+    </FrameLayout>
 </FrameLayout>
