--- a/app/src/main/res/layout/frag_recharge_base.xml
+++ b/app/src/main/res/layout/frag_recharge_base.xml
@@ -23,7 +23,7 @@
                     android:id="@+id/tv_total_price"
                     android:layout_gravity="left|center_vertical"
                     android:layout_marginLeft="28dp"
-                    android:text="支付金额：￥0"
+                    android:text="支付金额：0.0"
                     android:textColor="#ff535353"
                     android:textSize="16dp"
                     android:layout_width="wrap_content" android:layout_height="wrap_content"/>
