--- a/app/src/main/res/layout/jz_layout_std_custom.xml
+++ b/app/src/main/res/layout/jz_layout_std_custom.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:background="@android:color/black"
-                android:descendantFocusability="afterDescendants">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@android:color/black"
+        android:descendantFocusability="afterDescendants">
 
 
     <FrameLayout
-        android:id="@+id/surface_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:id="@+id/surface_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
     </FrameLayout>
 
     <ImageView
-        android:id="@+id/thumb"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:background="#000000"
-        android:scaleType="fitCenter" />
+            android:id="@+id/thumb"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:background="#000000"
+            android:scaleType="fitCenter" />
 
     <LinearLayout
-        android:id="@+id/layout_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/jz_bottom_bg"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:visibility="invisible">
+            android:id="@+id/layout_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/jz_bottom_bg"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:visibility="invisible">
 
         <ImageView
                 android:paddingLeft="14dp"
@@ -48,158 +48,166 @@
                 android:textColor="#ffffff" />
 
         <SeekBar
-            android:layout_marginLeft="12dp"
-            android:id="@+id/bottom_seek_progress"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1.0"
-            android:background="@null"
-            android:max="100"
-            android:maxHeight="1dp"
-            android:minHeight="1dp"
-            android:paddingLeft="12dp"
-            android:paddingTop="8dp"
-            android:paddingRight="12dp"
-            android:paddingBottom="8dp"
-            android:progressDrawable="@drawable/jz_bottom_seek_progress"
-            android:thumb="@drawable/jz_bottom_seek_thumb" />
+                android:layout_marginLeft="12dp"
+                android:id="@+id/bottom_seek_progress"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1.0"
+                android:background="@null"
+                android:max="100"
+                android:maxHeight="1dp"
+                android:minHeight="1dp"
+                android:paddingLeft="12dp"
+                android:paddingTop="8dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="8dp"
+                android:progressDrawable="@drawable/jz_bottom_seek_progress"
+                android:thumb="@drawable/jz_bottom_seek_thumb" />
 
         <!--<TextView-->
-                <!--android:text="/"-->
-                <!--android:textColor="#ffffff"-->
-                <!--android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
+        <!--android:text="/"-->
+        <!--android:textColor="#ffffff"-->
+        <!--android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
         <TextView
-            android:id="@+id/total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="00:00"
-            android:textColor="#ffffff" />
+                android:id="@+id/total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00"
+                android:textColor="#ffffff" />
 
         <TextView
-            android:id="@+id/clarity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:paddingLeft="20dp"
-            android:text="clarity"
-            android:textAlignment="center"
-            android:textColor="#ffffff" />
+                android:id="@+id/clarity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:paddingLeft="20dp"
+                android:text="clarity"
+                android:textAlignment="center"
+                android:textColor="#ffffff" />
 
         <ImageView
-            android:id="@+id/fullscreen"
-            android:layout_width="52.5dp"
-            android:layout_height="fill_parent"
-            android:paddingLeft="14dp"
-            android:paddingRight="14dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/jz_enlarge" />
+                android:id="@+id/fullscreen"
+                android:layout_width="52.5dp"
+                android:layout_height="fill_parent"
+                android:paddingLeft="14dp"
+                android:paddingRight="14dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/jz_enlarge" />
     </LinearLayout>
 
     <ProgressBar
-        android:id="@+id/bottom_progress"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="1.5dp"
-        android:layout_alignParentBottom="true"
-        android:max="100"
-        android:progressDrawable="@drawable/jz_bottom_progress" />
+            android:id="@+id/bottom_progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="1.5dp"
+            android:layout_alignParentBottom="true"
+            android:max="100"
+            android:progressDrawable="@drawable/jz_bottom_progress" />
 
     <ImageView
-        android:id="@+id/back_tiny"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginTop="6dp"
-        android:background="@drawable/jz_click_back_tiny_selector"
-        android:visibility="gone" />
+            android:id="@+id/back_tiny"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="6dp"
+            android:background="@drawable/jz_click_back_tiny_selector"
+            android:visibility="gone" />
 
     <RelativeLayout
-        android:id="@+id/layout_top"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/jz_title_bg"
-        android:paddingStart="10dp"
-        android:paddingLeft="10dp"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/back"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
+            android:id="@+id/layout_top"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="12dp"
-            android:padding="3dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/jz_click_back_selector" />
+            android:background="@drawable/jz_title_bg"
+            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
+            android:visibility="gone">
+
+        <ImageView
+                android:id="@+id/back"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="12dp"
+                android:padding="3dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/jz_click_back_selector" />
 
         <TextView
-            android:layout_alignParentRight="true"
-            android:singleLine="true"
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="100dp"
-            android:layout_toRightOf="@+id/back"
-            android:ellipsize="end"
-            android:textColor="#ffffff"
-            android:textSize="18sp" />
+                android:layout_alignParentRight="true"
+                android:singleLine="true"
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="100dp"
+                android:layout_toRightOf="@+id/back"
+                android:ellipsize="end"
+                android:textColor="#ffffff"
+                android:textSize="18sp" />
 
 
         <LinearLayout
-            android:id="@+id/battery_time_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="14dp"
-            android:layout_marginRight="14dp"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:visibility="invisible">
-
-            <ImageView
-                android:id="@+id/battery_level"
-                android:layout_width="23dp"
-                android:layout_height="10dp"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/jz_battery_level_10" />
-
-            <TextView
-                android:id="@+id/video_current_time"
+                android:id="@+id/battery_time_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="14dp"
+                android:layout_marginRight="14dp"
                 android:gravity="center_vertical"
-                android:maxLines="1"
-                android:textColor="#ffffffff"
-                android:textSize="12.0sp" />
+                android:orientation="vertical"
+                android:visibility="invisible">
+
+            <ImageView
+                    android:id="@+id/battery_level"
+                    android:layout_width="23dp"
+                    android:layout_height="10dp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/jz_battery_level_10" />
+
+            <TextView
+                    android:id="@+id/video_current_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:textColor="#ffffffff"
+                    android:textSize="12.0sp" />
         </LinearLayout>
     </RelativeLayout>
 
-    <ProgressBar
-        android:id="@+id/loading"
-        android:layout_width="@dimen/jz_start_button_w_h_normal"
-        android:layout_height="@dimen/jz_start_button_w_h_normal"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:indeterminateDrawable="@drawable/jz_loading"
-        android:visibility="invisible" />
-
     <LinearLayout
-        android:id="@+id/start_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_gravity="center_vertical">
+            android:visibility="invisible"
+            android:gravity="center"
+            android:id="@+id/loading_group"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content" android:layout_height="wrap_content">
+        <ProgressBar
+                android:id="@+id/loading"
+                android:layout_width="@dimen/jz_start_button_w_h_normal"
+                android:layout_height="@dimen/jz_start_button_w_h_normal"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:indeterminateDrawable="@drawable/jz_loading"
+                android:visibility="invisible" />
+        <TextView android:layout_marginLeft="8dp" android:textSize="14dp" android:textColor="#eee" android:id="@+id/tv_speed" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+    </LinearLayout>
+    <LinearLayout
+            android:id="@+id/start_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical">
 
         <ImageView
                 android:id="@+id/start"
@@ -210,54 +218,54 @@
 
 
     <TextView
-        android:id="@+id/replay_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/start_layout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="6dp"
-        android:text="@string/replay"
-        android:textColor="#ffffff"
-        android:textSize="12sp"
-        android:visibility="invisible" />
+            android:id="@+id/replay_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/start_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="6dp"
+            android:text="@string/replay"
+            android:textColor="#ffffff"
+            android:textSize="12sp"
+            android:visibility="invisible" />
 
     <LinearLayout
-        android:id="@+id/retry_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:visibility="invisible">
-
-        <TextView
+            android:id="@+id/retry_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/video_loading_failed"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="invisible">
 
         <TextView
-            android:id="@+id/retry_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/retry_bg"
-            android:paddingLeft="9dp"
-            android:paddingTop="4dp"
-            android:paddingRight="9dp"
-            android:paddingBottom="4dp"
-            android:text="@string/click_to_restart"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/video_loading_failed"
+                android:textColor="@android:color/white"
+                android:textSize="14sp" />
+
+        <TextView
+                android:id="@+id/retry_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/retry_bg"
+                android:paddingLeft="9dp"
+                android:paddingTop="4dp"
+                android:paddingRight="9dp"
+                android:paddingBottom="4dp"
+                android:text="@string/click_to_restart"
+                android:textColor="@android:color/white"
+                android:textSize="14sp" />
     </LinearLayout>
 
 
     <android.support.constraint.ConstraintLayout
             android:id="@+id/cl"
             android:layout_width="match_parent"
-                                                 android:layout_height="match_parent">
+            android:layout_height="match_parent">
 
         <com.jyt.video.common.view.StatusBarHeightView
                 app:layout_constraintTop_toTopOf="parent"
