--- a/app/src/main/res/layout/vh_recharge_input_item.xml
+++ b/app/src/main/res/layout/vh_recharge_input_item.xml
@@ -37,6 +37,7 @@
     <TextView
             android:includeFontPadding="false"
             android:layout_marginTop="11dp"
+            android:paddingBottom="8dp"
             app:layout_constraintTop_toTopOf="@id/v_background"
             app:layout_constraintLeft_toLeftOf="@id/v_background"
             app:layout_constraintRight_toRightOf="@id/v_background"
@@ -58,8 +59,11 @@
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:textColor="#ff9c28b1"
-            android:textSize="26dp"
-            android:layout_marginTop="32dp"/>
+            android:textSize="20dp"
+            android:paddingBottom="4dp"
+            android:text="0"
+            android:maxLength="6"
+            android:layout_marginTop="35.2dp"/>
     <View
             app:layout_constraintTop_toBottomOf="@id/input_price"
             app:layout_constraintLeft_toLeftOf="@id/input_price"
