--- a/app/src/main/res/layout/vh_recharge_item.xml
+++ b/app/src/main/res/layout/vh_recharge_item.xml
@@ -34,13 +34,15 @@
     <TextView
             android:includeFontPadding="false"
             android:layout_marginTop="11dp"
+            android:paddingBottom="8dp"
             app:layout_constraintTop_toTopOf="@id/v_background"
             app:layout_constraintLeft_toLeftOf="@id/v_background"
             app:layout_constraintRight_toRightOf="@id/v_background"
             android:text="包月套餐"
             android:textColor="#ff000000"
             android:textSize="16dp"
-            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tv_title"/>
+            android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tv_title"
+            />
     <TextView
             app:layout_constraintBaseline_toBaselineOf="@id/tv_price"
             app:layout_constrainedWidth="true"
@@ -67,7 +69,7 @@
             android:layout_height="wrap_content"
             android:text="00"
             android:textColor="#ff9c28b1"
-            android:textSize="26dp"
+            android:textSize="20dp"
     />
     <TextView
             android:layout_marginTop="8dp"
