--- a/app/src/main/res/layout/frag_personal.xml
+++ b/app/src/main/res/layout/frag_personal.xml
@@ -73,14 +73,19 @@
                     android:id="@+id/img_crown"/>
 
             <TextView
-                    app:layout_constraintBottom_toBottomOf="@id/img_avatar"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    app:layout_constraintHorizontal_bias="0"
+                    android:layout_marginRight="50dp"
+                    android:id="@+id/tv_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
                     android:layout_marginBottom="45dp"
                     android:includeFontPadding="false"
-                    android:text=" "
-                    android:textColor="#ffffffff"
-                    android:textSize="16dp"
-                    android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tv_name"
-                    app:layout_constraintLeft_toRightOf="@+id/img_avatar" android:layout_marginLeft="15dp"/>
+                    android:text=" " android:textColor="#ffffffff" android:textSize="16dp"
+                    app:layout_constraintBottom_toBottomOf="@id/img_avatar" app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintLeft_toRightOf="@+id/img_avatar"/>
 
 
             <TextView
