--- a/app/src/main/res/layout/jz_layout_std_custom.xml
+++ b/app/src/main/res/layout/jz_layout_std_custom.xml
@@ -306,42 +306,43 @@
 
         </FrameLayout>
 
-        <FrameLayout
-                android:background="@color/black"
-                android:visibility="gone"
-                android:id="@+id/fl_end_free"
-                android:layout_width="match_parent" android:layout_height="match_parent">
+        <include layout="@layout/include_end_free_watch"/>
+        <!--<FrameLayout-->
+                <!--android:background="@color/black"-->
+                <!--android:visibility="gone"-->
+                <!--android:id="@+id/fl_end_free"-->
+                <!--android:layout_width="match_parent" android:layout_height="match_parent">-->
 
-            <TextView
-                    android:id="@+id/tv_free_play_hint"
-                    android:layout_marginBottom="144dp"
-                    android:layout_gravity="bottom|center_horizontal"
-                    android:text="试看结束，若要继续观看请先购买"
-                    android:textColor="#ffffffff"
-                    android:textSize="16dp"
-                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+            <!--<TextView-->
+                    <!--android:id="@+id/tv_free_play_hint"-->
+                    <!--android:layout_marginBottom="144dp"-->
+                    <!--android:layout_gravity="bottom|center_horizontal"-->
+                    <!--android:text="试看结束，若要继续观看请先购买"-->
+                    <!--android:textColor="#ffffffff"-->
+                    <!--android:textSize="16dp"-->
+                    <!--android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->
 
-            <Button
-                    android:layout_gravity="left|bottom"
-                    android:background="@drawable/shape_14r_solide_white"
-                    android:layout_marginLeft="69dp"
-                    android:layout_marginBottom="78dp"
-                    android:id="@+id/btn_buy_mumber"
-                    android:text="购买会员"
-                    android:layout_width="80dp" android:layout_height="29dp"/>
-            <Button
-                    android:layout_gravity="right|bottom"
-                    android:paddingLeft="12dp"
-                    android:paddingRight="12dp"
-                    android:background="@drawable/shape_14r_solide_white"
-                    android:layout_marginBottom="78dp"
-                    android:layout_marginRight="69dp"
-                    android:id="@+id/btn_buy_video"
-                    android:text="999金币购买"
-                    android:layout_width="wrap_content"
-                    android:minWidth="80dp" android:layout_height="29dp"/>
+            <!--<Button-->
+                    <!--android:layout_gravity="left|bottom"-->
+                    <!--android:background="@drawable/shape_14r_solide_white"-->
+                    <!--android:layout_marginLeft="69dp"-->
+                    <!--android:layout_marginBottom="78dp"-->
+                    <!--android:id="@+id/btn_buy_mumber"-->
+                    <!--android:text="购买会员"-->
+                    <!--android:layout_width="80dp" android:layout_height="29dp"/>-->
+            <!--<Button-->
+                    <!--android:layout_gravity="right|bottom"-->
+                    <!--android:paddingLeft="12dp"-->
+                    <!--android:paddingRight="12dp"-->
+                    <!--android:background="@drawable/shape_14r_solide_white"-->
+                    <!--android:layout_marginBottom="78dp"-->
+                    <!--android:layout_marginRight="69dp"-->
+                    <!--android:id="@+id/btn_buy_video"-->
+                    <!--android:text="999金币购买"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:minWidth="80dp" android:layout_height="29dp"/>-->
 
-        </FrameLayout>
+        <!--</FrameLayout>-->
 
         <ImageView
                 app:layout_constraintWidth_percent="0.8"
