登陆页面修复键盘弹起问题 播放页面 修改全屏状态下 快进速率

--- a/app/src/main/res/layout/act_base.xml
+++ b/app/src/main/res/layout/act_base.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:background="@color/actBackground"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:id="@+id/ll_base_content"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+        android:id="@+id/ll_base_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/actBackground"
+        android:fitsSystemWindows="false"
+        android:orientation="vertical">
 
 
     <include layout="@layout/layout_toolbar"></include>
