--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -1,170 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto">
-    
-    <FrameLayout
-            android:background="@color/white"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="200dp">
-        <ImageView
-                android:src="@mipmap/logo"
-                android:id="@+id/logo"
-                android:layout_gravity="center"
-                android:layout_width="110dp"
-                android:layout_height="110dp"/>
-    </FrameLayout>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:background="@color/white"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                        android:id="@+id/logo"
+                        android:layout_width="110dp"
+                        android:layout_height="110dp"
+                        android:layout_gravity="center"
+                        android:src="@mipmap/ic_launcher" />
+            </FrameLayout>
 
 
-    <View
-            android:background="@color/zxing_status_text"
-            android:layout_marginTop="200dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="500dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-    
-    <ImageView
-            android:src="@mipmap/yonghuzhuzhanghaoguanli"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="220dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="21dp"
-            android:layout_width="16dp" android:layout_height="16dp"/>
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="500dp"
+                    android:layout_marginTop="200dp"
+                    android:background="@color/zxing_status_text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginTop="220dp"
+                    android:src="@mipmap/yonghuzhuzhanghaoguanli"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
-    <ImageView
-            android:src="@mipmap/mima"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="280dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="21dp"
-            android:layout_width="16dp" android:layout_height="16dp"/>
-    
-    <View
-            android:layout_marginTop="250dp"
-            android:layout_marginLeft="53dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:background="#e2e2e2"
-            android:layout_width="290dp" android:layout_height="1dp"/>
-    <View
-            android:layout_marginTop="305dp"
-            android:layout_marginLeft="53dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:background="#e2e2e2"
-            android:layout_width="290dp" android:layout_height="1dp"/>
+            <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginTop="280dp"
+                    android:src="@mipmap/mima"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+            <View
+                    android:layout_width="290dp"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="53dp"
+                    android:layout_marginTop="250dp"
+                    android:background="#e2e2e2"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            android:includeFontPadding="false"
-            android:background="@null"
-            android:imeOptions="actionNext"
-            android:singleLine="true"
-            android:hint="请输入帐号"
-            android:layout_marginTop="223dp"
-            android:layout_marginLeft="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:textColorHint="#7F000000"
-            android:textSize="14dp"
-            android:layout_width="290dp" android:layout_height="wrap_content" android:id="@+id/input_account"/>
+            <View
+                    android:layout_width="290dp"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="53dp"
+                    android:layout_marginTop="305dp"
+                    android:background="#e2e2e2"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-            android:inputType="textPassword"
-            android:includeFontPadding="false"
-            android:background="@null"
-            android:imeOptions="actionDone"
-            android:singleLine="true"
-            android:hint="请输入密码"
-            android:layout_marginTop="281dp"
-            android:layout_marginLeft="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:textColorHint="#7F000000"
-            android:textSize="14dp"
-            android:layout_width="290dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/input_psd"/>
+            <EditText
 
-    <TextView
-            android:layout_marginTop="390dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:text="还没有帐号？点击注册"
-            android:textColor="#000"
-            android:textSize="12dp"
-            android:layout_width="125dp"
-            android:layout_height="16dp"
-            android:id="@+id/btn_to_register"
-            android:layout_marginLeft="218dp"
-            android:background="@color/zhihu_bottom_toolbar_bg"
-    />
+                    android:id="@+id/input_account"
+                    android:layout_width="290dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginTop="223dp"
+                    android:background="@null"
+                    android:hint="请输入帐号"
+                    android:imeOptions="actionNext"
+                    android:includeFontPadding="false"
+                    android:singleLine="true"
+                    android:textColorHint="#7F000000"
+                    android:textSize="14dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-            android:layout_marginTop="335dp"
-            android:layout_marginRight="32dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:background="@drawable/shape_primary_style_btn"
-            android:textColor="#ffffffff"
-            android:textSize="12dp"
-            android:text="登 录"
-            android:layout_width="292dp"
-            android:layout_height="40dp"
-            android:id="@+id/btn_login"
-    />
+            <EditText
+                    android:id="@+id/input_psd"
+                    android:layout_width="290dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginTop="281dp"
+                    android:background="@null"
+                    android:hint="请输入密码"
+                    android:imeOptions="actionDone"
+                    android:includeFontPadding="false"
+                    android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:textColorHint="#7F000000"
+                    android:textSize="14dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                    android:id="@+id/btn_to_register"
+                    android:layout_width="125dp"
+                    android:layout_height="16dp"
+                    android:layout_marginLeft="218dp"
+                    android:layout_marginTop="390dp"
+                    android:background="@color/zhihu_bottom_toolbar_bg"
+                    android:text="还没有帐号？点击注册"
+                    android:textColor="#000"
+                    android:textSize="12dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                    android:id="@+id/btn_login"
+                    android:layout_width="292dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="335dp"
+                    android:layout_marginRight="32dp"
+                    android:background="@drawable/shape_primary_style_btn"
+                    android:text="登 录"
+                    android:textColor="#ffffffff"
+                    android:textSize="12dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-            android:visibility="gone"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            android:id="@+id/tv_protocol_label"
-            android:layout_marginBottom="48dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/tv_to_protocol"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:text="登录即同意"
-            android:textColor="#ff000000"
-            android:textSize="14sp"
-    />
-    <TextView
-            android:visibility="gone"
-            android:layout_marginBottom="48dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/tv_protocol_label"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:text="《用户使用协议》"
-            android:textColor="#ff9c28b1"
-            android:textSize="14sp"
-            android:id="@+id/tv_to_protocol"/>
+            <TextView
+                    android:id="@+id/tv_protocol_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_marginBottom="48dp"
+                    android:text="登录即同意"
+                    android:textColor="#ff000000"
+                    android:textSize="14sp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/tv_to_protocol" />
 
-    <LinearLayout android:id="@+id/thrid_login" android:visibility="invisible" android:layout_width="wrap_content"
-                  android:layout_height="wrap_content" android:layout_marginTop="8dp"
-                  android:gravity="center" android:orientation="vertical"
-                  app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent"
-                  app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@+id/btn_to_register">
-        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center">
-            <View android:layout_width="91dp" android:layout_height="1dp" android:background="#000"/>
-            <TextView android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_marginLeft="11dp"
-                      android:layout_marginRight="11dp" android:text="第三方登录" android:textColor="#000"
-                      android:textSize="12dp"/>
-            <View android:layout_width="91dp" android:layout_height="1dp" android:background="#000"/>
-        </LinearLayout>
+            <TextView
+                    android:id="@+id/tv_to_protocol"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_marginBottom="48dp"
+                    android:text="《用户使用协议》"
+                    android:textColor="#ff9c28b1"
+                    android:textSize="14sp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/tv_protocol_label"
+                    app:layout_constraintRight_toRightOf="parent" />
 
-        <ImageView android:id="@+id/wxlogin" android:layout_width="58dp" android:layout_height="58dp"
-                   android:layout_marginTop="41dp" android:src="@mipmap/weixin_login"/>
+            <LinearLayout
+                    android:id="@+id/thrid_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:visibility="invisible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/btn_to_register">
+
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center">
+
+                    <View
+                            android:layout_width="91dp"
+                            android:layout_height="1dp"
+                            android:background="#000" />
+
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="11dp"
+                            android:layout_marginRight="11dp"
+                            android:text="第三方登录"
+                            android:textColor="#000"
+                            android:textSize="12dp" />
+
+                    <View
+                            android:layout_width="91dp"
+                            android:layout_height="1dp"
+                            android:background="#000" />
+                </LinearLayout>
+
+                <ImageView
+                        android:id="@+id/wxlogin"
+                        android:layout_width="58dp"
+                        android:layout_height="58dp"
+                        android:layout_marginTop="41dp"
+                        android:src="@mipmap/weixin_login" />
+            </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
+
+
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+
+</ScrollView>
+
